--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json --ssl true --ssl-cert localhost-rsa-cert.pem --ssl-key localhost-rsa-key.pem",
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json --ssl false --ssl-cert localhost-rsa-cert.pem --ssl-key localhost-rsa-key.pem",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
