--- a/angular.json
+++ b/angular.json
@@ -86,9 +86,14 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "ng-extract-i18n-merge:ng-extract-i18n-merge",
           "options": {
-            "browserTarget": "peanobar-app:build"
+            "browserTarget": "peanobar-app:build",
+            "format": "xlf",
+            "outputPath": "src/locale",
+            "targetFiles": [
+              "messages.it-IT.xlf"
+            ]
           }
         },
         "test": {
